--- a/.github/workflows/xyz.yml
+++ b/.github/workflows/xyz.yml
@@ -30,7 +30,7 @@ jobs:
           git config user.email "github-actions@github.com"
           git add xyz.m3u
           if ! git diff --cached --quiet; then
-            git commit -m "Update xyz.m3u"
+            git commit -m "Update zvt.m3u"
             git push
           else
             echo "Değişiklik yok, commit atılmadı."
